Modify blacklists configuration

--- a/domains-blacklist.conf
+++ b/domains-blacklist.conf
@@ -16,8 +16,8 @@ https://filters.adtidy.org/extension/chromium/filters/3.txt
 # AdGuard Annoyances filter
 https://filters.adtidy.org/extension/chromium/filters/14.txt
 
-# NoCoin Filter List
-https://raw.githubusercontent.com/hoshsadiq/adblock-nocoin-list/master/nocoin.txt
+# CoinBlocker Domains List
+https://gitlab.com/ZeroDot1/CoinBlockerLists/raw/master/list.txt
 
 # AdGuard Safari filter
 https://filters.adtidy.org/extension/chromium/filters/12.txt
@@ -27,3 +27,6 @@ https://easylist-downloads.adblockplus.org/easylistchina.txt
 
 # CJX's Annoyance List
 https://raw.githubusercontent.com/cjx82630/cjxlist/master/cjx-annoyance.txt
+
+# DShield.org Suspicious Domain List - High
+https://www.dshield.org/feeds/suspiciousdomains_High.txt
